--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/hopee-main-logo.png?v=20251126" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>hopee-rules</title>
   </head>
