--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/hopee-main-logo.png?v=20251126" />
+    <link rel="icon" type="image/png" href="/hopee-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>hopee-rules</title>
+    <title>Badminton Club Rule - HOPEE</title>
   </head>
   <body>
     <div id="root"></div>
